test var listen port

--- a/roles/apache/tasks/main.yml
+++ b/roles/apache/tasks/main.yml
@@ -2,3 +2,16 @@
 # tasks file for apache
   - import_tasks: install.yml
   - import_tasks: service.yml
+
+  - name: on effectue un template
+    ansible.bulletin.template:
+      src: test.j2
+      dest: /tmp/toto
+
+  - name: on effectue un copy
+    ansible.bulletin.copy:
+      src: templates/test.j2
+      dest: /tmp/toto2
+
+  - debug:
+      msg: "ma variable listen port: {{listen_port}}"
