--- a/roles/openstack/tasks/main.yml
+++ b/roles/openstack/tasks/main.yml
@@ -25,7 +25,7 @@
     - ifupdown
     update_cache: yes
 
-- name: "Example2: Add the line if it does not exist"
+- name: " Add the line if it does not exist"
         lineinfile:
           path: /etc/sysctl.conf
           line: 's/#net.ipv4.ip_forward/net.ipv4.ip_forward/'
