--- a/roles/openstack/tasks/main.yml
+++ b/roles/openstack/tasks/main.yml
@@ -37,5 +37,10 @@
     dest: /etc/sysctl.conf
     regexp: '#net.ipv4.ip_forward=1'
     line: 'net.ipv4.ip_forward=1'
-
     backrefs: yes
+
+- sysctl:
+    name: load sysctl
+    sysctl_file: /etc/sysctl.conf
+    reload: yes
+
